<resources>
    <string name="app_name">Angelic_music</string>
    <string name="button_music">button_music</string>
    <string name="button_play">Воспроизвести</string>
    <string name="button_stop">Остановить</string>
    <string name="button_pause">Пауза</string>
    <string name="time_now"></string>
    <string name="time_full"></string>
    <string name="track_info"></string>
    <string name="track_name" />
    <string name="track_prev">предыдущий</string>
    <string name="track_next">следующий</string>
    <string name="name_track" />
    <string name="exit">exit</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
</resources>