<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#461134"
    android:backgroundTintMode="screen"
    android:hapticFeedbackEnabled="false"
    tools:context=".MainActivity"
    tools:ignore="VisualLintBounds">

    <ListView
        android:id="@+id/listView_tracks"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/listview_rounded_top"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="1dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/track_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_rounded_botton"
        android:elevation="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar2">


        <ImageButton
            android:id="@+id/imageButton_trackPrev"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="8dp"
            android:background="@drawable/button_rounded"
            android:contentDescription="@string/track_prev"
            android:scaleType="centerInside"
            app:srcCompat="@android:drawable/ic_media_previous"
            app:tint="#FFFFFF" />

        <ImageButton
            android:id="@+id/imageButton_play_pause"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="8dp"
            android:background="@drawable/button_rounded"
            android:contentDescription="@string/button_play"
            android:scaleType="centerInside"
            app:srcCompat="@android:drawable/ic_media_play"
            app:tint="#FFFFFF" />

        <ImageButton
            android:id="@+id/imageButton_music"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="8dp"
            android:background="@drawable/button_rounded"
            android:contentDescription="@string/button_stop"
            android:scaleType="centerInside"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
            app:tint="#FFFFFF" />

        <!--        <ImageButton-->
        <!--            android:id="@+id/imageButton_pause"-->
        <!--            android:layout_width="60dp"-->
        <!--            android:layout_height="60dp"-->
        <!--            android:layout_margin="8dp"-->
        <!--            android:background="@drawable/button_rounded"-->
        <!--            android:contentDescription="@string/button_pause"-->
        <!--            android:scaleType="centerInside"-->
        <!--            app:srcCompat="@android:drawable/ic_media_pause"-->
        <!--            app:tint="#FFFFFF" />-->

        <ImageButton
            android:id="@+id/imageButton_track_next"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="8dp"
            android:background="@drawable/button_rounded"
            android:contentDescription="@string/track_next"
            android:scaleType="centerInside"
            app:srcCompat="@android:drawable/ic_media_next"
            app:tint="#FFFFFF" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/seekBar2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/track_info" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/track_info"
        android:layout_width="0dp"
        android:layout_height="88dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toTopOf="@+id/seekBar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listView_tracks">

        <TextView
            android:id="@+id/textView_name_track"
            android:layout_width="341dp"
            android:layout_height="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/name_track"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/track_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/editTextTime"
            android:layout_width="60dp"
            android:layout_height="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/time_now"
            android:importantForAutofill="no"
            android:inputType="time"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_name_track"
            tools:ignore="TextViewEdits" />

        <TextView
            android:id="@+id/editTextTime_fullTime"
            android:layout_width="60dp"
            android:layout_height="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/time_full"
            android:inputType="time"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_name_track"
            tools:ignore="TextViewEdits" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/imageButton_closeApp"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:backgroundTint="#00BCD4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        app:tint="#FFFFFF" />

</androidx.constraintlayout.widget.ConstraintLayout>